# home-automation

./: .gitignore  LICENSE  README.md  nanopi.md
hardware/: .gitignore  README.md  generate.py  prepare.py  resolveDependencies.py  toolchainGenerator.py
hardware/arm/: HOW TO FLASH.md  toolchainGenerator.py
hardware/arm/device/: CMakeLists.txt
hardware/arm/device/TestDevice/: .cproject  .project  upload.sh
hardware/arm/device/WindowSensor/: .cproject  .project  CMakeLists.txt
hardware/arm/device/cmake_from_eclipse/: CMakeLists.txt
hardware/arm/device/cmake_from_eclipse/include/: stm32f0xx_hal_conf.h  tim.h
hardware/arm/device/cmake_from_eclipse/src/: adc.c  tim.c
hardware/arm/device/switch_one/: CMakeLists.txt
hardware/arm/eagle/: gumyns.lbr
hardware/arm/eagle/connector/: eagle.epf
hardware/arm/hub/: CMakeLists.txt
hardware/arm/lib/: .cproject
hardware/arm/lib/lib/: Buffer.h
hardware/arm/toolchain/: STM32F0.cmake
hardware/devices/diode-cmake/: CMakeLists.txt  Makefile  generated.ioc
hardware/devices/diode-cmake/Src/: main.c
hardware/devices/diode-cmake/cmake/: ArmDirectories.cmake  STM32F0Dependencies.cmake
hardware/devices/diode-cmake/cmake/Modules/: FindCMSISF0.cmake
hardware/devices/test-device/kicad/: Power.sch  common.sch  fp-lib-table  rj12.sch  test-device-cache.lib  test-device.kicad_pcb  test-device.pro  test-device.sch
hardware/devices/usart-test-device/: CMakeLists.txt  Makefile  upload.sh  window-sensor.ioc
hardware/devices/usart-test-device/Inc/: main.h  stm32f0xx_it.h
hardware/devices/usart-test-device/Src/: gpio.c  main.c  stm32f0xx_it.c  usart.c
hardware/devices/window-sensor/: CMakeLists.txt  buildAll.py  startup_stm32f030x6.s  upload.sh  window-sensor.ioc
hardware/devices/window-sensor/Inc/: Application.h  i2c.h  main.h  stm32f0xx_it.h
hardware/devices/window-sensor/Src/: Application.cpp  gpio.c  i2c.c  main.c  main.cpp  stm32f0xx_it.c
hardware/devices/window-sensor/board/: window-sensor.sch
hardware/devices/window-sensor/lib/include/common/: I2CAddresses.h
hardware/hub/usart-1-port/: CMakeLists.txt  upload.sh  usart.1.ioc
hardware/hub/usart-1-port/Inc/: Application.h  main.h  stm32f0xx_it.h  usart.h
hardware/hub/usart-1-port/Src/: Application.cpp  gpio.c  main.cpp  stm32f0xx_it.c  usart.c
hardware/hub/usart-test-hub/: CMakeLists.txt  Makefile  upload.sh  window-sensor.ioc
hardware/hub/usart-test-hub/Inc/: main.h
hardware/hub/usart-test-hub/Src/: gpio.c  main.c  stm32f0xx_it.c
hardware/scripts/: generateDirectories.py  generateStartup.py  generateToolchain.py
hardware/scripts/templates/: FindCMSIS.template  FindHAL.template  FindSTM32Startup.template  directory.template  toolchain.template
hardware/templates/device/: template.ioc
hardware/templates/device/simple_6_pin/: simple_device.brd
hardware/templates/kicad/: .gitignore
hardware/templates/kicad/connectors/: fp-lib-table  rj12-cache.lib  rj12.pro  rj12.sch
hardware/templates/kicad/power sources/: lm1117v33-sot223-cache.lib  lm1117v33-sot223.pro  lm1117v33-sot223.sch
hardware_old/arm/: .gitignore  CMakeLists.txt  README.md  toolchainGenerator.py
hardware_old/arm/device/WindowSensor/: .cproject  CMakeLists.txt  upload.sh
hardware_old/arm/device/WindowSensor/include/: BlinkLed.h
hardware_old/arm/device/WindowSensor/include/config/: GPIO.h
hardware_old/arm/device/WindowSensor/include/lib/: Frame.h
hardware_old/arm/device/WindowSensor/ldscripts/: mem.ld  sections.ld
hardware_old/arm/device/WindowSensor/src/: DeviceManager.cpp  DeviceParser.cpp  DeviceSocket.cpp  main.cpp
hardware_old/arm/eagle/: gumyns.lbr
hardware_old/arm/eagle/connector/: schema.brd  schema.sch
hardware_old/arm/hub/USART/: .cproject  .project  upload.sh
hardware_old/arm/lib/lib/: Channels.h  Device.h  Parser.h
hardware_old/arm/std-libs/: StdLibs.cmake
openhab2/: .gitignore  README.md  gumyns.channels.json  gumyns.things.json
openhab2/org.openhab.binding.gumyns/: .classpath  .project  build.properties  pom.xml
openhab2/org.openhab.binding.gumyns/ESH-INF/binding/: binding.xml
openhab2/org.openhab.binding.gumyns/OSGI-INF/: GumynsChannelTypeProvider.xml  GumynsHandlerFactory.xml  GumynsThingTypeProvider.xml
server/: .gitignore  CMakeLists.txt  DEPENDENCIES.md  README.md  buildAll.py  buildPlugins.py  crosscompiler.md  downloadDependencies.sh
server/cmake/: Boost.cmake  Compiler.cmake
server/core/: .gitignore  CMakeLists.txt  README.md  db.sqlite
server/core/cmake/Modules/: FindSQLite3.cmake  FindZeroMQ.cmake
server/core/sample_database/: db.sqlite
server/core/src/: Application.cpp  Application.h  main.cpp
server/core/src/config/: Config.cpp  Config.h
server/core/src/database/: DatabaseService.cpp  DatabaseService.h
server/core/src/hardware/: DeviceFactory.cpp  DeviceFactory.h  GatewayFactory.cpp  GatewayFactory.h  HardwareManager.cpp  HardwareManager.h
server/core/src/hardware/model/: Device.h  DeviceInfo.h  Gateway.h  PluginDescriptor.h
server/core/src/openhab/: AddressConverter.h  Bimap.h  BindingManager.cpp  BindingManager.h
server/core/src/utils/: Logger.h  Query.h  utils.h
server/plugins/: .gitignore  CMakeLists.txt
server/plugins/cmake/: CommonStuff.cmake  DescriptionGenerator.cmake  descriptionGenerator.py
server/plugins/device/: CMakeLists.txt  DEVICES.md  README.md
server/plugins/device/system_monitor/: CMakeLists.txt  README.md
server/plugins/device/test_device/: CMakeLists.txt  README.md
server/plugins/device/test_device/src/: Parser.cpp  Parser.h
server/plugins/device/test_device/test/: main.cpp
server/plugins/hub/: CMakeLists.txt
server/plugins/hub/system_monitor/: CMakeLists.txt  README.md
server/plugins/hub/system_monitor/src/: Factory.cpp  Factory.h  Parser.cpp
server/plugins/hub/system_monitor/test/: main.cpp
server/plugins/include/: common.h
server/scripts/: buildPlugins.py  resolveDependencies.py
server/scripts/dependency/: 00_boost.py  01_json.py  02_zeromq.py  03_zeromq_cpp.py  04_modern_sqlite.py  40_build_boost.py  41_build_zeromq.py  dep_lib.py
(+127 files in other folders)
